...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
    <Button
        android:id="@+id/home_but_routes"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
...
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Routes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/home_but_routes"
        app:layout_constraintRight_toLeftOf="@id/test_but_routes"/>

    <Button
        android:id="@+id/test_but_routes"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
...
