...
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/routes_but_home" />

    <Button
        android:id="@+id/routes_but_home"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Routes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/home_but_home"
        app:layout_constraintRight_toLeftOf="@id/test_but_home"/>

    <Button
        android:id="@+id/test_but_home"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
...
